--- a/build.config
+++ b/build.config
@@ -201,7 +201,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 
 ### Include AmneziaWG kernel module
-CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
+#CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
 
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
@@ -304,3 +304,4 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_QUEUE=m
 CONFIG_BRIDGE_NF_EBTABLES=m
+
